--- a/Competencia/Competencia.ipynb
+++ b/Competencia/Competencia.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
   },
@@ -109,83 +110,30 @@
     "#Elimianción de columnas con mayor cantidad de null o nan\n",
     "aux=(data_pre.isnull().sum()/len(data_pre))*100\n",
     "col_total=data_pre.columns\n",
-    "col_final=[col_total[i] for i in range(len(col_total)) if aux[i]>=20]\n",
+    "col_remove=[col_total[i] for i in range(len(col_total)) if aux[i]>=20]\n",
     "\n",
-    "data_pre=data_pre.drop(col_final,axis=1)"
+    "data_pre=data_pre.drop(col_remove,axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric = train[['Item_Weight', 'Item_Visibility', 'Item_MRP', 'Outlet_Establishment_Year']]\n",
-    "var = numeric.var()\n",
-    "numeric = numeric.columns\n",
-    "variable = [ ]\n",
-    "for i in range(0,len(var)):\n",
-    "    if var[i]>=10:   #setting the threshold as 10%\n",
-    "       variable.append(numeric[i])\n",
-    "print(variable)"
+    "#Eliminación de columnas por baja varianza.\n",
+    "#En primera instancia se seleccionan las columnas numéricas, luego se retira la columna 'class' porque es nuestra vble y\n",
+    "a=data_pre.var()\n",
+    "a.drop('class')\n",
+    "col_total=data_pre.columns\n",
+    "\n",
+    "col_ana=[col_total[i] for i in range(len(a)) if a[i]<=0.001]\n",
+    "col_ana"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "length                   57.662224\n",
-       "molecular_weight     696597.541314\n",
-       "charge                    9.106499\n",
-       "charge_density            0.000002\n",
-       "isoelectric_point         7.067160\n",
-       "                         ...      \n",
-       "embed_2_96                0.664676\n",
-       "embed_2_97                0.122261\n",
-       "embed_2_98                0.099083\n",
-       "embed_2_99                0.061636\n",
-       "class                     0.247095\n",
-       "Length: 1759, dtype: float64"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_pre.var()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'isnumeric'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-45-dedc91513158>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata_pre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnumeric\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5272\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5273\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5274\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5275\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5276\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'isnumeric'"
-     ]
-    }
-   ],
-   "source": [
-    "data_pre.isnumeric()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -209,74 +157,106 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>Unnamed: 0</th>\n",
+       "      <th>charge</th>\n",
+       "      <th>taugrant30</th>\n",
+       "      <th>QSOgrant1</th>\n",
+       "      <th>QSOgrant2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.999996</td>\n",
+       "      <th>count</th>\n",
+       "      <td>15506.000000</td>\n",
+       "      <td>15506.000000</td>\n",
+       "      <td>15506.000000</td>\n",
+       "      <td>15506.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <td>0.999996</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.869740</td>\n",
+       "      <td>0.116402</td>\n",
+       "      <td>0.013334</td>\n",
+       "      <td>0.014927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.017698</td>\n",
+       "      <td>0.426620</td>\n",
+       "      <td>0.023763</td>\n",
+       "      <td>0.029479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-13.894000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-0.004000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.793000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.005501</td>\n",
+       "      <td>0.004394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.860000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.016044</td>\n",
+       "      <td>0.016778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>21.996000</td>\n",
+       "      <td>4.419000</td>\n",
+       "      <td>0.524904</td>\n",
+       "      <td>0.771977</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Unnamed: 0.1  Unnamed: 0\n",
-       "Unnamed: 0.1      1.000000    0.999996\n",
-       "Unnamed: 0        0.999996    1.000000"
+       "             charge    taugrant30     QSOgrant1     QSOgrant2\n",
+       "count  15506.000000  15506.000000  15506.000000  15506.000000\n",
+       "mean       1.869740      0.116402      0.013334      0.014927\n",
+       "std        3.017698      0.426620      0.023763      0.029479\n",
+       "min      -13.894000      0.000000      0.000000      0.000000\n",
+       "25%       -0.004000      0.000000      0.000000      0.000000\n",
+       "50%        1.793000      0.000000      0.005501      0.004394\n",
+       "75%        3.860000      0.000000      0.016044      0.016778\n",
+       "max       21.996000      4.419000      0.524904      0.771977"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aux=data_validacion[['Unnamed: 0.1','Unnamed: 0']]\n",
-    "aux.corr()"
+    "data_pre[['charge',\n",
+    " 'taugrant30',\n",
+    " 'QSOgrant1',\n",
+    " 'QSOgrant2']].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(13883, 1761)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'sequence', 'length', 'molecular_weight', 'charge',\n",
-       "       'charge_density', 'isoelectric_point', 'gravy', 'instability_index',\n",
-       "       'aromaticity',\n",
-       "       ...\n",
-       "       'embed_2_91', 'embed_2_92', 'embed_2_93', 'embed_2_94', 'embed_2_95',\n",
-       "       'embed_2_96', 'embed_2_97', 'embed_2_98', 'embed_2_99', 'class'],\n",
-       "      dtype='object', length=1761)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(data_train.shape)\n",
-    "data_train.head()\n",
-    "data_train.columns"
+    "#cmap = sns.diverging_palette(h_neg=10,h_pos=240,as_cmap=True)\n",
+    "#sns.heatmap(data_pre.corr(), center=0,cmap=cmap, linewidths=1,annot=True, fmt=\".2f\")\n",
+    "data_pre.corr()\n"
    ]
   },
   {
