--- a/Competencia/Competencia.ipynb
+++ b/Competencia/Competencia.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,19 @@
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC \n",
+    "from sklearn import naive_bayes\n",
+    "#from sklearn.feature_selection import RFE\n",
+    "#from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +56,7 @@
     "#Cargar la data\n",
     "data_positiva=pd.read_csv('Datos/DatosPositivos1.csv')\n",
     "data_negativa=pd.read_csv('Datos/DatosNegativos1.csv')\n",
-    "data_validacion=pd.read_csv('Datos/DatosValidacion1.csv')\n",
+    "#data_validacion=pd.read_csv('Datos/DatosValidacion1.csv')\n",
     "\n",
     "data_positiva['Tipo']='Train'\n",
     "data_negativa['Tipo']='Train'\n",
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,12 +275,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scaler=StandardScaler()\n",
-    "#aata_std=scaler.fit(data_train)"
+    "#Volviendo a la estructura original\n",
+    "data_train=data_pre[data_pre['Tipo']=='Train']\n",
+    "data_val=data_pre[data_pre['Tipo']=='Test']\n",
+    "\n",
+    "data_train=data_train.drop(['Tipo'],axis=1)\n",
+    "data_test=data_val.drop(['Tipo'],axis=1)\n",
+    "\n",
+    "y=data_train.pop('class')\n",
+    "X=data_train\n",
+    "\n",
+    "y_val=data_val.pop('class')\n",
+    "X_val=data_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extraer la columnas con valores numéricos\n",
+    "col_num1=[i for i in X_train.columns if \"int\" in str(X_train[i].dtype) or \"float\" in str(X_train[i].dtype)]\n",
+    "col_num2=[i for i in X_test.columns if \"int\" in str(X_test[i].dtype) or \"float\" in str(X_test[i].dtype)]\n",
+    "\n",
+    "#creación del modelo de normalización\n",
+    "scaler=StandardScaler()\n",
+    "X_train_std=scaler.fit_transform(X_train[col_num1])\n",
+    "X_test_std=scaler.transform(X_test[col_num2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementación de los modelos de clasificación\n",
+    "\n",
+    "Los modelos con los cuales trabajaremos son:\n",
+    "    \n",
+    "    1.LogisticRegressor\n",
+    "    2.RandomForest\n",
+    "    3.Red Neuronal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='liblinear', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Regresión Logistica\n",
+    "lr = LogisticRegression(solver='liblinear')\n",
+    "lr.fit(X_train_std,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisión del clasificador: 87.36 \n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = lr.predict(X_test_std)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print (\"Precisión del clasificador Logitica: %.2f \" %(acc*100) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='poly',\n",
+       "    max_iter=-1, probability=False, random_state=0, shrinking=True, tol=0.001,\n",
+       "    verbose=False)"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SVM\n",
+    "#Una SVM Lineal\n",
+    "#Una SVM de base Radial y\n",
+    "#Una SVM Polinomial\n",
+    "\n",
+    "svm_lineal = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "svm_rbf = SVC(kernel='rbf', C=1.0, random_state=0)\n",
+    "svm_poly = SVC(kernel='poly', C=1.0, random_state=0)\n",
+    "\n",
+    "# Entrenamos los modelos\n",
+    "svm_lineal.fit(X_train_std, y_train)\n",
+    "svm_rbf.fit(X_train_std, y_train)\n",
+    "svm_poly.fit(X_train_std, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisión del clasificador Lineal: 87.18 \n",
+      "Precisión del clasificador Radial: 91.11 \n",
+      "Precisión del clasificador Polinomial: 87.94 \n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = svm_lineal.predict(X_test_std)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print (\"Precisión del clasificador Lineal: %.2f \" %(acc*100.0))\n",
+    "\n",
+    "y_pred = svm_rbf.predict(X_test_std)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print (\"Precisión del clasificador Radial: %.2f \" %(acc*100.0))\n",
+    "\n",
+    "y_pred = svm_poly.predict(X_test_std)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print (\"Precisión del clasificador Polinomial: %.2f \" %(acc*100.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianNB(priors=None, var_smoothing=1e-09)"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Naive Bayes\n",
+    "nv = naive_bayes.GaussianNB()\n",
+    "nv.fit(X_train_std,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisión del clasificador Radial: 75.77 \n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = nv.predict(X_test_std)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print (\"Precisión del clasificador Radial: %.2f \" %(acc*100.0))"
    ]
   },
   {
